syntax ="proto3";
option go_package="github.com/vietquan-37/go-microservice/commons/api";
package api;
service OrderService{
  rpc CreateOrder(CreateOrderRequest)returns(Order);
}
message CreateOrderRequest{
  string customerID=1;
  repeated Items items=2;
}
message Items{
  string ID=1;
  string Name=2;
  int32 Quantity=3;
  string PriceID=4;
}
message Order{
  string ID=1;
  string customerID=2;
  string Status=3;
  repeated Items items=4;
}